--- a/app/pom.xml
+++ b/app/pom.xml
@@ -21,6 +21,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pl.harpi</groupId>
+            <artifactId>db</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
