--- a/app/pom.xml
+++ b/app/pom.xml
@@ -15,7 +15,6 @@
         <dependency>
             <groupId>pl.harpi</groupId>
             <artifactId>identity-app</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,7 +35,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>${spring.version}</version>
 
                 <configuration>
                     <mainClass>pl.harpi.springboot.demo.DemoApplication</mainClass>
