--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,10 @@
 
         <docker.artifactory>harpipl.jfrog.io</docker.artifactory>
 
-        <mapstruct.version>1.4.2.Final</mapstruct.version>
+        <mapstruct.version>1.5.1.Final</mapstruct.version>
         <liquibase.version>4.9.1</liquibase.version>
-        <lombok.version>1.18.22</lombok.version>
-        <spring.version>2.5.4</spring.version>
+        <lombok.version>1.18.24</lombok.version>
+        <spring.version>2.7.0</spring.version>
         <groovy.version>3.0.10</groovy.version>
         <spock.version>2.1-groovy-3.0</spock.version>
     </properties>
@@ -67,6 +67,7 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
